--- a/My work/paper/论文主题.md
+++ b/My work/paper/论文主题.md
@@ -21,10 +21,11 @@ Based on the research of the principle of convolutional neural network, this pap
 
 ## 1.1 研究背景
 
-随着人工智能时代的来临
+随着科学技术的发展，特别是在近十年里面，人工智能领域飞速发展，一系列智能算法应运而出，切实的解决了我们生活中、社会上许多问题。所谓的人工智能，即是一种赋予机器生物(人类)行为与思考的技术，如蚁群算法、粒子群算法、模拟遗传算法等等，但是现在应用范围最广阔、技术最成熟的，便是神经网络算法。
 
+人工智能领域中有着许多的实现方式，均可以通过设计优秀的算法来达到一定的目的，而其中人机交互是其中最直观，也是其现在应用程度最高的一类实现方式。所谓的人机交互，便是通过人们对计算机输入文字、图像、声音来训练以获得优质的模型，解决人们生活中现实存在的问题，由此也诞生了一系统的学科————自然语言处理、数字图像处理、数字语音处理等。而其中图像类别的应用最为丰富，现在从事这类科研与研发的研究人员和公司也是最多的。因为图像中包含了丰富的信息，单是人脸识别这一领域，便有年龄、性别、民族等极其丰富的信息。
 
-
+人脸识别技术包含多个子分支，其中
 
 ## 1.2 人脸性别识别研究的目的和意义
 ## 1.3 卷积神经网络研究现状
@@ -43,12 +44,16 @@ Based on the research of the principle of convolutional neural network, this pap
 ## 3.2 卷积神经网络的求解
 ## 3.3 卷积神经网络的改进
 
-# 第四章 卷积神经网络对人脸的性别识别
+# 第四章 人脸检测相关技术研究
 
-## 4.1 用于性别识别的卷积神经网络结构设计
-## 4.2 卷积神经网络建模求解过程
-## 4.3 结果仿真和分析
+## 4.1 人脸检测方法原理
+## 4.2 人脸检测方法仿真
+## 4.3 人脸图像预处理
 
-# 第五章 总结与展望
+# 第五章 卷积神经网络对人脸的性别识别
 
-//考虑添加一个人脸检测的章节
+## 5.1 用于性别识别的卷积神经网络结构设计
+## 5.2 卷积神经网络建模求解过程
+## 5.3 结果仿真和分析
+
+# 第六章 总结与展望
