--- a/My work/paper/论文主题.md
+++ b/My work/paper/论文主题.md
@@ -25,12 +25,48 @@ Based on the research of the principle of convolutional neural network, this pap
 
 人工智能领域中有着许多的实现方式，均可以通过设计优秀的算法来达到一定的目的，而其中人机交互是其中最直观，也是其现在应用程度最高的一类实现方式。所谓的人机交互，便是通过人们对计算机输入文字、图像、声音来训练以获得优质的模型，解决人们生活中现实存在的问题，由此也诞生了一系统的学科————自然语言处理、数字图像处理、数字语音处理等。而其中图像类别的应用最为丰富，现在从事这类科研与研发的研究人员和公司也是最多的。因为图像中包含了丰富的信息，单是人脸识别这一领域，便有年龄、性别、民族等极其丰富的信息。
 
-人脸识别技术包含多个子分支，其中
+人脸识别技术包含多个任务子分支，首先要对一个图片进行人脸检测。如果这张图片中含有人脸，那么再进一步进行人脸图片的预处理，将图片去噪，重点突出人脸部分。之后进行关键特征提取，从而进行人脸身份识别，其中生物特征识别可包括诸多的特征，根据这些特征的不同技术也不尽相同，如性别检测、年龄检测等。
 
-## 1.2 人脸性别识别研究的目的和意义
-## 1.3 卷积神经网络研究现状
-## 1.4 国内外研究现状
-## 1.5 文章组织结构
+性别检测在其中是较为简单的一个二分类问题，但是在社会日常生活中，这个问题任然扮演了十分重要的角色，如下列情境下：
+
+1）在社会治安中，公安部门在相关地方搜寻嫌疑犯的情况下，使用性别识别技术可以将人群先进行性别过滤，有助于侦查工作取得较好的效率；
+2）在娱乐购物场景下，我们可以使用人脸性别检测技术，对顾客的性别进行检测，实现性别偏向的智能推荐，提高商场环境下的用户满意度；
+
+故性别识别在人类日常生活中有着很重要的实用价值。
+
+## 1.2 卷积神经网络研究现状
+
+上个世纪六十年代，Hubel和Wiesel的实验揭示了视觉皮质神经元如何编码图像，帮助我们理解了视觉通路中的神经元如何从视网膜上投射的光图案中提取复杂的信息以构建图像。
+
+最初的卷积神经⽹络要追溯到上个世纪七十年代，建⽴起现代卷积⽹络学科的开创性论⽂为“Gradient-based learning applied to document recognition”[1]，作者为 Yann LeCun，Léon Bottou，Yoshua Bengio，和Patrick Haffner，其中他们使用梯度下降算法训练了我们今天所熟知的卷积神经网络，并建立了LeNet，且将其应用在了手写体字母识别上。
+
+但是在此之后，受限于计算机的算力和广泛的数据集支持，卷积神经网络一直停留在小范围的图片处理阶段，使用价值并不高。但ILSVRC2012中Alex和Hinton提出的的AlexNet[2]开启了卷积神经网络在计算机视觉上大规模应用的先河，在ImageNet上的错误率也在人们对网络结构的一步步改进中降低至个位数百分点。
+
+下面给出卷积神经网络的进化图示：
+![evolve](http://ww1.sinaimg.cn/large/006kDro9gy1g2pqefur4fj30pz0agjx8.jpg)
+
+之后在ILSVRC各年的竞赛中，各大研究机构提出了改进后的版本，如Inception V1、GoogLeNet等，继续降低了识别的错误率，从此卷积神经网络具有了很高的使用价值，催生了一系统机器视觉公司，为我们的生活生产带来了诸多方便。
+
+## 1.3 国内外研究现状
+
+基于卷积神经网络的性别识别在人脸识别领域在今年成为热点之一，国内外的学者对此进行了相关的研究，取得了不错的效果，产生了一些具有实际应用价值的成果。
+
+国外的Gil Levi和Tal Hassner[3]设计了一种基于卷积神经网络的方案，并在Adience基准下取得了最佳的成绩；Ahmed等人直接将图像的RGB像素输入了卷积神经网络，在FRGC人脸数据路中取得了95%的识别准确率[4]；Aasma Aslam等人将图像在YCbCr空间中的Y分量经过小波变换，达到了较高的识别准确率[5]。
+
+国内的黄勇提出了一种结合Gabor特征和基于Fisher准则的卷积神经网络的性别识别方法[6]，裴子龙提出了一种使用PSO粒子群优化CNN网络的方法[7]，陆丽提出了采用AdaBoost算法提 取脸部整体特征，主动外观模型提取局部特征（脸部几何特征），融合局部与整体特征后用支持向量机进行分类的方法[8]。
+
+
+## 1.4 文章组织结构
+
+针对性别识别这一课题，本文从基础理论知识、卷积神经网络原理、人脸检测、图片与处理、性别特征分类这几个方面进行研究，搭建出用于性别识别的神经网络，并进行数据集的测试。
+
+其中文章安排如下：
+
+第一章：对文章的研究背景、目的和意义进行叙述，说明了卷积神经网络的现状，以及对性别识别领域中国内外的研究现状；
+第二章：
+
+
+
 
 # 第二章 相关理论与技术综述
 
@@ -57,3 +93,14 @@ Based on the research of the principle of convolutional neural network, this pap
 ## 5.3 结果仿真和分析
 
 # 第六章 总结与展望
+
+# 附录
+
+[1]:Gradient-based learning applied to document recognition
+[2]:ImageNet Classification with Deep Convolutional Neural Networks
+[3]:Age and Gender Classification using Convolutional Neural Networks
+[4]:Training Hierarchical Feed-Forward Visual Recognition Models Using Transfer Learning from Pseudo-Tasks
+[5]:Wavelet-based convolutional neural networks for gender classification
+[6]:基于人脸图像的性别识别研究
+[7]:基于卷积神经网络的人脸性别识别研究
+[8]:基于人脸图像的性别识别与年龄估计研究
