--- a/My work/paper/论文主题.md
+++ b/My work/paper/论文主题.md
@@ -63,10 +63,11 @@ Based on the research of the principle of convolutional neural network, this pap
 其中文章安排如下：
 
 第一章：对文章的研究背景、目的和意义进行叙述，说明了卷积神经网络的现状，以及对性别识别领域中国内外的研究现状；
-第二章：
-
-
-
+第二章：对基础的理论和工具做了简单的介绍，对人工神经网络基础概念做了叙述，之后对实现语言的选取以及数据集的采用进行了说明；
+第三章：对卷积神经网络的原理做了详细的介绍，从其结构到模型，以及求解方法均进行了叙述；
+第四章：对人脸检测技术进行了说明，详细说明了其原理和实现方法，之后对图片做了预处理，方便投入神经网络进行学习；
+第五章：设计了用于性别识别的卷积神经网络，详细介绍了训练过程中各个参数的变化，并进行了数据集测试，得出了准确率的数据；
+第六章：总结了全文，指出了自己准确率的不足之处，以及改进的方法。
 
 # 第二章 相关理论与技术综述
 
@@ -89,7 +90,7 @@ Based on the research of the principle of convolutional neural network, this pap
 # 第五章 卷积神经网络对人脸的性别识别
 
 ## 5.1 用于性别识别的卷积神经网络结构设计
-## 5.2 卷积神经网络建模求解过程
+## 5.2 卷积神经网络建模过程
 ## 5.3 结果仿真和分析
 
 # 第六章 总结与展望
