--- a/My work/paper/论文主题.md
+++ b/My work/paper/论文主题.md
@@ -69,9 +69,68 @@ Based on the research of the principle of convolutional neural network, this pap
 第五章：设计了用于性别识别的卷积神经网络，详细介绍了训练过程中各个参数的变化，并进行了数据集测试，得出了准确率的数据；
 第六章：总结了全文，指出了自己准确率的不足之处，以及改进的方法。
 
-# 第二章 相关理论与技术综述
+# 第二章 神经网络相关理论与技术综述
+
+本章节首先对人工神经网络的技术与原理做阐述，之后对人工神经网络中较简单的BP神经网络首先进行分析，并分析了现阶段人工智能与机器学习领域常用的语言选择，且对人脸数据库的选择进行说明。
 
 ## 2.1 人工神经网络技术
+
+人工智能在近几十年高度发展，形成了机器学习、知识推理、智能算法等庞大的学科体系,其中发展的最好、成果最为丰富的为机器学习一科。机器学习拥有传统计算机行业不具备的优势，即无需明确的编程指定便可以进行学习，且经过网络结构的设计与调参的整理工作，一部分神经网络模型显示出了十分优秀的学习水平。
+
+![](http://ww1.sinaimg.cn/large/006kDro9ly1g2uybcm113j30lk0d6ad3.jpg)
+
+根据第一章1.2节卷积神经网络的研究现状，人工神经网络为20世纪80年代出现的一种新型的智能技术，其基于生物学中神经网络构造原理，通过模拟人的大脑来构建一个智能化的信息处理系统。神经网络由大量的神经元相互连接而成，其拥有高度的非线性特点，在处理非线性逻辑操作方面显示出了强大的能力，且其作为一中仿生生智能型，拥有并行计算、高容错率的特点，可以进行智能化学习。近年内，人工神经网络在机器视觉、语音识别、自然语言处理等诸多领域发挥了重要作用，下面文章对其基本原理进行说明。
+
+### 2.1.1 神经元
+
+在生物学中，人脑中的最基本的处理单元为神经元。而对于人工神经网络，其模仿人脑神经元建立了多个彼此连接的结点，即人工神经网络中的神经元。如图2-1所示：
+
+![神经网络模型](http://ww1.sinaimg.cn/large/006kDro9ly1g2uy64au8wj30k208ydgq.jpg)
+
+我们假设一个神经元拥有$d$个输入$x_{1}, x_{2}, \cdots, x_{d}$，用向量$\mathbf{x}=\left[x_{1} ; x_{2} ; \cdots ; x_{d}\right]$表示这组输出，并用$a$来表示输出，我们有：
+
+$$\begin{aligned} 
+a &=f\left(\sum_{i=1}^{d} w_{i} x_{i}+b\right)\\
+&=\mathbf{w}^{\mathrm{T}} \mathbf{x}+b 
+\end{aligned}
+$$
+
+其中$\mathbf{w}=\left[w_{1} ; w_{2} ; \cdots ; w_{d}\right] \in \mathbb{R}^{d}$为$d$维的权重向量，$b \in \mathbb{R}$为神经网络的偏置，非线性函数$f(\cdot)$为激活函数，常用的为sigmoid函数：
+
+$$
+f(x)=\frac{1}{1+e^{-x}}, 0<f(x)<1
+$$
+
+综上所述，典型的神经元结构如下[9]：
+
+![](http://ww1.sinaimg.cn/large/006kDro9ly1g2uzj3yjm8j30ih0brmy1.jpg)
+
+### 2.2.2 神经网络的学习方式
+
+机器学习中根据不同准测的划分，可以将学习算法划分成不同的分类。比如根据激活函数$f(\mathbf{x}, \theta)$的不同，我们将其分为线性模型与非线性模型；以学习准则的不同，可以分为统计方法与非统计方法；以训练样本提供的信息以及反馈方式的不同，我们可以将其分为有监督学习、无监督学习记忆强化学习。其中第三种方案也是我们最常使用的方案，下面文章对其分类原理与依据进行介绍。
+
+- 监督学习(Supervised Learning)
+
+若在机器学习中我们的目标为建立样本特征$x$与便签$y$之间的关系：$y=f(x,\theta)$，且训练中每一个样本均有标签，我们称之为监督学习。且根据其标签类型的不同，又可以将监督学习分为回归与分类两类。
+
+监督学习过程中，我们先将样本数据投入神经网络，得到输出后与期望值进行比较以得到误差信号，再根据误差函数对输入向量的值进行调整，在多次训练后将误差信号收敛到一个可接受的范围，便最终确定了网络的输入向量与网络结构。我们可以将其表示为：
+
+$$
+\hat{\mathbf{y}}=\underset{\mathbf{y} \in \operatorname{Gen}(\mathbf{x})}{\operatorname{argmax}} f(\boldsymbol{\phi}(\mathbf{x}, \mathbf{y}), \theta)
+$$
+
+- 无监督学习(Unsupervised Learning)
+
+无监督的学习是指在没有目标训练标签的训练样本中自适应的学习，以获取有价值的信息，这种算法由于没有人为的干预，可以更好的体现出自适应学习的特点。
+
+- 强化学习(Reinforcement Learning)
+
+
+
+
+### 2.2.3 常见的人工神经网络模型
+
+
 ## 2.2 设计语言与学习框架
 ## 2.3 数据与数据集
 
@@ -105,3 +164,4 @@ Based on the research of the principle of convolutional neural network, this pap
 [6]:基于人脸图像的性别识别研究
 [7]:基于卷积神经网络的人脸性别识别研究
 [8]:基于人脸图像的性别识别与年龄估计研究
+[9]:
