--- a/My work/paper/论文主题.md
+++ b/My work/paper/论文主题.md
@@ -105,7 +105,7 @@ $$
 
 ![](http://ww1.sinaimg.cn/large/006kDro9ly1g2uzj3yjm8j30ih0brmy1.jpg)
 
-### 2.2.2 神经网络的学习方式
+### 2.1.2 神经网络的学习方式
 
 机器学习中根据不同准测的划分，可以将学习算法划分成不同的分类。比如根据激活函数$f(\mathbf{x}, \theta)$的不同，我们将其分为线性模型与非线性模型；以学习准则的不同，可以分为统计方法与非统计方法；以训练样本提供的信息以及反馈方式的不同，我们可以将其分为有监督学习、无监督学习记忆强化学习。其中第三种方案也是我们最常使用的方案，下面文章对其分类原理与依据进行介绍。
 
@@ -119,20 +119,61 @@ $$
 \hat{\mathbf{y}}=\underset{\mathbf{y} \in \operatorname{Gen}(\mathbf{x})}{\operatorname{argmax}} f(\boldsymbol{\phi}(\mathbf{x}, \mathbf{y}), \theta)
 $$
 
+常见的监督学习方法有：纠错学习规则等。
+
 - 无监督学习(Unsupervised Learning)
 
 无监督的学习是指在没有目标训练标签的训练样本中自适应的学习，以获取有价值的信息，这种算法由于没有人为的干预，可以更好的体现出自适应学习的特点。
 
+常见的无监督学习有Hebb学习规则、竞争型学习规则等。
+
 - 强化学习(Reinforcement Learning)
 
+强化学习是一类根据交互来学习的机器学习算法，其根据环境的状态给出自己的判断，收到即使或延时的奖励。网络在与环境的交互中不断学习，以得到最大化的回报与奖励。
 
 
+### 2.1.3 常见的人工神经网络模型
 
-### 2.2.3 常见的人工神经网络模型
+单个人工神经元的功能较为简单，要模拟人脑的功能，必须使用多个神经元进行协作以完成复杂的功能。这样通过一定的连接方式或信息传递方式进行协作的神经元可以看作是一个网络，就是神经网络。[9]
 
+根据所处理问题的不同，目前研究者们发明了各种不同的神经网络结构，其中最常用的为以下三种：
 
-## 2.2 设计语言与学习框架
-## 2.3 数据与数据集
+- 前馈型神经网络
+
+在前馈网络中，各层神经元按照接受信息的先后分成不同的组，其中每一组都可以看成一个神经层。除第一层与最后一层外，每一层网络都接受前一层的信息，并传递给下一层。整个网络的传播方向均为正向，无反向传播信息，根据图论的知识可以将其视为一个有向无环路图。
+
+前馈型神经网络中常见的网络类型有：全连接前馈型网络、BP神经网络、径向基函数RBF网络与卷积神经网络等。
+
+- 反馈型神经网络
+
+与前馈神经网络不同，反馈型神经网络不仅仅可以接受其他神经元传来的信号，也可以接受自己传来的信号。根据图论的知识可以将其视为一个无向图或者有向循环图。
+
+反馈型神经网络常见的网络类型有：循环卷积网络、Hopfield网络、玻尔兹曼机、神经图灵机等。
+
+- 图网络
+
+由于前馈与反馈型的神经网络的输入都可以用向量来表示，而有一部分数据，如知识图谱、社交分子网络等机构只能以图的形式进行处理，故人们设计了基于图结构的神经网络。其节点既可以接收来自相邻结点的数据，也可以接收自己的数据。
+
+图类型神经网络常见的网络类型有：图卷积网络、消息传递网络等。
+
+三种网络的构造示意如下图所示：
+![](http://ww1.sinaimg.cn/large/006kDro9gy1g2ve58s7ijj30oy07ftag.jpg)
+
+## 2.2 设计语言与学习框架的对比与选择
+
+正如传统的工具一般，一种编程语言只是实现框架的一种工具，无论使用如中工具均可以达到自己的目标。但是，工具使用起来是否顺手，即是否可以快速、高效率的将自己的想法以清晰、有条理的代码呈现，仍是十分重要的。下面我们进行常见语言的对比以进行选择。
+
+![](http://ww1.sinaimg.cn/large/006kDro9gy1g2vcqz33dzj30qf0d8goa.jpg)
+
+正如TOBIE index[10]语言指数反映的一样，在榜单前列的为JAVA、C/C++、Python等。但JAVA更偏重于框架开发，工业级别应用的制作，而C/C++更贴近底层的开发，虽然前者有其较好的机器学习开源JAR类，后者更是所有编程人员的基本功，其在人工智能领域的方便、受欢迎程度远不及Python、Matlab。但Matlab又为一闭源的平台，更偏重于工具类的调取，其强大的矩阵运算也在一定程度上被Numpy开源库所替代。
+
+Python中携带大量的开源库文件，可以较为简单的调用以实现自己构想的功能，使编程人员将时间精力投入在AI/ML相关的算法、框架的设计上，故文章中所设相关的的脚本选择采用Python语言进行编写。
+
+在网络架构的编写上，人们更倾向于使用框架进行实现。一方面开源框架提供了诸多的函数调用，不必要再进行重写，由于在参数的学习过程中一般通过反向传播算法进行学习，采用手工计算梯度的算法经常陷入低效、鲁棒性低的难题之中；另一方面，使用框架可以更为简单的使用CUDA进行加速，提高网络的训练速度。常用的机器学习框架有：Tensorflow以及其的包装框架keras、caffe、PyTorch等，本文选用Tensorflow框架进行开发。
+
+## 总结
+
+本章首先对人工神经网络中的基础概念进行了阐述，之后分别介绍了神经网络中学习方式的划分方法，以及常见的人工神经网络结构模型，最后对文章采用的编程设计语言和框架多了简单的介绍。
 
 # 第三章 卷积神经网络原理
 
@@ -164,4 +205,5 @@ $$
 [6]:基于人脸图像的性别识别研究
 [7]:基于卷积神经网络的人脸性别识别研究
 [8]:基于人脸图像的性别识别与年龄估计研究
-[9]:
+[9]:神经网络与机器学习
+[10]:https://www.tiobe.com/tiobe-index/
