--- a/My work/paper/论文主题.md
+++ b/My work/paper/论文主题.md
@@ -105,6 +105,7 @@ $$
 
 ![](http://ww1.sinaimg.cn/large/006kDro9ly1g2uzj3yjm8j30ih0brmy1.jpg)
 
+
 ### 2.1.2 神经网络的学习方式
 
 机器学习中根据不同准测的划分，可以将学习算法划分成不同的分类。比如根据激活函数$f(\mathbf{x}, \theta)$的不同，我们将其分为线性模型与非线性模型；以学习准则的不同，可以分为统计方法与非统计方法；以训练样本提供的信息以及反馈方式的不同，我们可以将其分为有监督学习、无监督学习记忆强化学习。其中第三种方案也是我们最常使用的方案，下面文章对其分类原理与依据进行介绍。
@@ -159,7 +160,93 @@ $$
 三种网络的构造示意如下图所示：
 ![](http://ww1.sinaimg.cn/large/006kDro9gy1g2ve58s7ijj30oy07ftag.jpg)
 
-## 2.2 设计语言与学习框架的对比与选择
+## 2.2 训练网格时所用到的基础技术原理
+
+在上节文章介绍了神经网络的相关元素，在本节文章重点讨论在训练网络过程中，所使用的技术原理，为第三章卷积神经网络的原理介绍做铺垫。
+
+### 2.2.1 学习准则
+
+所谓的学习准则即为制定一种规则，定量的衡量我们训练模型的优劣。
+
+网络学习过程中，假设输入空间为$\mathcal{X}$输出空间为$\mathcal{Y}$，训练集$\mathcal{D}=\left\{\left(\mathbf{x}^{(n)}, y^{(n)}\right)\right\}_{n=1}^{N}$满足独立同分布，若存在一模型$f\left(\mathbf{x}, \theta^{*}\right),f : \mathcal{X} \rightarrow \mathcal{Y}$，使得：
+
+
+$$\left|f\left(\mathbf{x}, \theta^{*}\right)-y\right|<\epsilon, \quad \forall(\mathbf{x}, y) \in \mathcal{X} \times \mathcal{Y}$$
+
+
+则称这是一个好的模型，其中$y$为真实映射函数。
+
+其中模型的好坏我们可以用期望风险$\mathcal{R(\theta)}$予以衡量:
+
+$$\mathcal{R}(\theta)=\mathbb{E}_{(\mathbf{x}, y) \sim p_{r}(\mathbf{x}, y)}[\mathcal{L}(y, f(\mathbf{x}, \theta))]$$
+
+其中$p_{r}(x,y)$为真实概率分布，$\mathcal{L(y,f(x,\theta))}$为损失函数。
+
+常见的损失函数有:
+
+- 0-1损失函数
+
+$\begin{equation}
+\mathcal{L}(y, f(\mathbf{x}, \theta))=\left\{\begin{array}{ll}{0} & {\text { if } y=f(\mathbf{x}, \theta)} \\ {1} & {\text { if } y \neq f(\mathbf{x}, \theta)}\end{array}\right.
+\end{equation}$
+
+- 平方损失函数
+
+$\begin{equation}
+\mathcal{L}(y, f(\mathbf{x}, \theta))=\frac{1}{2}(y-f(\mathbf{x}, \theta))^{2}
+\end{equation}$
+
+- 交叉熵损失函数
+
+$\begin{equation}
+\mathcal{L}(\mathbf{y}, f(\mathbf{x}, \theta))=-\sum_{c=1}^{C} y_{c} \log f_{c}(\mathbf{x}, \theta)
+\end{equation}$
+
+由于我们实际上并不能确定真实概率分布与映射函数，所以我们无法计算期望风险，而使用经验风险进行代替，即训练集上的平均损失。
+$$\begin{equation}
+\mathcal{R}_{\mathcal{D}}^{e m p}(\theta)=\frac{1}{N} \sum_{n=1}^{N} \mathcal{L}\left(y^{(n)}, f\left(x^{(n)}, \theta\right)\right)
+\end{equation}$$
+
+我们可以确定一组参数$\theta^{*}$使得上式即经验风险最小，即经验风险最小化原则，
+$$
+\theta^{*}=\underset{\theta}{\arg \min } \mathcal{R}_{\mathcal{D}}^{e m p}(\theta)
+$$
+
+由大数定理可知当$\mathcal{D} \rightarrow \infty$时，经验风险接近期望风险：
+$$
+\lim _{n \rightarrow \infty} P\left\{\left|\frac{1}{n} \sum_{k=1}^{n} x_{k}-\frac{1}{n} \sum_{k=1}^{n} E x_{k}\right|<\varepsilon\right\}=1
+$$
+但是在实际的训练过程中，我们做不到以无限的数据进行训练，而是在数据集中拿出一部分进行训练，一部分进行验证。故经验风险最小化原则经常出现过拟合的现象，即在训练过程中准确率极高但是在非训练数据验证时正确率较低。
+
+![](http://ww1.sinaimg.cn/large/006kDro9ly1g2werh1pv4j30fk0boaa8.jpg)
+
+通常我们选择在经验最小化的基础上，引入正则项以限制模型的能力，达到避免过拟合的目的：
+
+$$
+\begin{aligned} \theta^{*} &=\underset{\theta}{\arg \min } \mathcal{R}_{\mathcal{D}}^{\operatorname{struct}}(\theta) \\ &=\underset{\theta}{\arg \min } \mathcal{R}_{\mathcal{D}}^{e m p}(\theta)+\frac{1}{2} \lambda\|\theta\|^{2} \\ &=\underset{\theta}{\arg \min } \frac{1}{N} \sum_{n=1}^{N} \mathcal{L}\left(y^{(n)}, f\left(x^{(n)}, \theta\right)\right)+\frac{1}{2} \lambda\|\theta\|^{2} \end{aligned}
+$$
+
+### 2.2.2 优化算法
+
+神经网络模型为非凸模型，我们通常使用梯度下降算法来求解其局部最优值。
+
+假设函数$f(x)$于$x_{t}$处连续可微，则$f(x)$下降最快的方向是函数于$x_{t}$处梯度方向的反方向。由泰勒公式对函数进行一阶展开可得：
+
+$$f\left(\mathbf{x}_{t+1}\right)=f\left(\mathbf{x}_{t}+\Delta \mathbf{x}\right) \approx f\left(\mathbf{x}_{t}\right)+\Delta \mathbf{x}^{\mathrm{T}} \nabla f\left(\mathbf{x}_{t}\right)$$
+
+取$\Delta \mathbf{x}=-\alpha \nabla f\left(\mathbf{x}_{t}\right)$，则当$\alpha > 0$且数值较小时，满足$f\left(\mathbf{x}_{t+1}\right)<f\left(\mathbf{x}_{t}\right)$,函数呈下降趋势。
+
+通过迭代公式$\mathbf{x}_{t+1}=\mathbf{x}_{t}-\alpha_{t} \nabla f\left(\mathbf{x}_{t}\right), t \geq 0$我们可以生成序列$\mathbf{x}_{0}, \mathbf{x}_{1}, \mathbf{x}_{2}, \dots$，使得：
+
+$$f\left(\mathbf{x}_{0}\right) \geq f\left(\mathbf{x}_{1}\right) \geq f\left(\mathbf{x}_{2}\right) \geq \cdots$$
+
+以逐渐逼近函数的最小值。
+
+梯度下降过程如下图所示，以函数$y=x_{1}^{2}+x_{1} x_{2}+3 x_{2}^{2}$为例：
+
+![](http://ww1.sinaimg.cn/large/006kDro9ly1g2wr8j3d26j311y0icjs6.jpg)
+
+## 2.3 设计语言与学习框架的对比与选择
 
 正如传统的工具一般，一种编程语言只是实现框架的一种工具，无论使用如中工具均可以达到自己的目标。但是，工具使用起来是否顺手，即是否可以快速、高效率的将自己的想法以清晰、有条理的代码呈现，仍是十分重要的。下面我们进行常见语言的对比以进行选择。
 
@@ -243,19 +330,14 @@ $$\begin{aligned} W^{(l)} & \leftarrow W^{(l)}-\alpha \frac{\partial \mathcal{R}
 ## 3. 卷积神经网络的求解
 ## 3. 卷积神经网络的改进
 
-# 第四章 人脸检测相关技术研究
+# 第四章 卷积神经网络对人脸的性别识别
 
-## 4.1 人脸检测方法原理
-## 4.2 人脸检测方法仿真
-## 4.3 人脸图像预处理
+## 4.1 人脸检测相关技术即仿真
+## 4.1 用于性别识别的卷积神经网络结构设计
+## 4.2 卷积神经网络建模过程
+## 4.3 结果仿真和分析
 
-# 第五章 卷积神经网络对人脸的性别识别
-
-## 5.1 用于性别识别的卷积神经网络结构设计
-## 5.2 卷积神经网络建模过程
-## 5.3 结果仿真和分析
-
-# 第六章 总结与展望
+# 第五章 总结与展望
 
 # 附录
 
