--- a/My work/paper/论文主题.md
+++ b/My work/paper/论文主题.md
@@ -186,21 +186,21 @@ $$\mathcal{R}(\theta)=\mathbb{E}_{(\mathbf{x}, y) \sim p_{r}(\mathbf{x}, y)}[\ma
 
 - 0-1损失函数
 
-$\begin{equation}
+$$\begin{equation}
 \mathcal{L}(y, f(\mathbf{x}, \theta))=\left\{\begin{array}{ll}{0} & {\text { if } y=f(\mathbf{x}, \theta)} \\ {1} & {\text { if } y \neq f(\mathbf{x}, \theta)}\end{array}\right.
-\end{equation}$
+\end{equation}$$
 
 - 平方损失函数
 
-$\begin{equation}
+$$\begin{equation}
 \mathcal{L}(y, f(\mathbf{x}, \theta))=\frac{1}{2}(y-f(\mathbf{x}, \theta))^{2}
-\end{equation}$
+\end{equation}$$
 
 - 交叉熵损失函数
 
-$\begin{equation}
+$$\begin{equation}
 \mathcal{L}(\mathbf{y}, f(\mathbf{x}, \theta))=-\sum_{c=1}^{C} y_{c} \log f_{c}(\mathbf{x}, \theta)
-\end{equation}$
+\end{equation}$$
 
 由于我们实际上并不能确定真实概率分布与映射函数，所以我们无法计算期望风险，而使用经验风险进行代替，即训练集上的平均损失。
 $$\begin{equation}
@@ -228,7 +228,7 @@ $$
 
 ### 2.2.2 优化算法
 
-神经网络模型为非凸模型，我们通常使用梯度下降算法来求解其局部最优值。
+神经网络模型为非凸模型，我们通常使用**梯度下降算法**来求解其局部最优值。
 
 假设函数$f(x)$于$x_{t}$处连续可微，则$f(x)$下降最快的方向是函数于$x_{t}$处梯度方向的反方向。由泰勒公式对函数进行一阶展开可得：
 
@@ -322,17 +322,104 @@ $$\mathcal{R}(W, \mathbf{b})=\frac{1}{N} \sum_{n=1}^{N} \mathcal{L}\left(\mathbf
 
 当我们有了足够的样本和以及学习准则后，网络参数便可以通过梯度下降算法来进行学习更新，其中第$l$层的参数更新方式为：
 
-$$\begin{aligned} W^{(l)} & \leftarrow W^{(l)}-\alpha \frac{\partial \mathcal{R}(W, \mathbf{b})}{\partial W^{(l)}} \\ &=W^{(l)}-\alpha\left(\frac{1}{N} \sum_{n=1}^{N}\left(\frac{\partial \mathcal{L}\left(\mathbf{y}^{(n)}, \hat{\mathbf{y}}^{(n)}\right)}{\partial W^{(l)}}\right)+\lambda W^{(l)}\right) \\ \mathbf{b}^{(l)} & \leftarrow \mathbf{b}^{(l)}-\alpha \frac{\partial \mathcal{R}(W, \mathbf{b})}{\partial \mathbf{b}^{(l)}} \\ &=\mathbf{b}^{(l)}-\alpha\left(\frac{1}{N} \sum_{n=1}^{N} \frac{\partial \mathcal{L}\left(\mathbf{y}^{(n)}, \hat{\mathbf{y}}^{(n)}\right)}{\partial \mathbf{b}^{(l)}}\right) \end{aligned}$$。
+$$\begin{aligned} W^{(l)} & \leftarrow W^{(l)}-\alpha \frac{\partial \mathcal{R}(W, \mathbf{b})}{\partial W^{(l)}} \\ &=W^{(l)}-\alpha\left(\frac{1}{N} \sum_{n=1}^{N}\left(\frac{\partial \mathcal{L}\left(\mathbf{y}^{(n)}, \hat{\mathbf{y}}^{(n)}\right)}{\partial W^{(l)}}\right)+\lambda W^{(l)}\right) \\ \mathbf{b}^{(l)} & \leftarrow \mathbf{b}^{(l)}-\alpha \frac{\partial \mathcal{R}(W, \mathbf{b})}{\partial \mathbf{b}^{(l)}} \\ &=\mathbf{b}^{(l)}-\alpha\left(\frac{1}{N} \sum_{n=1}^{N} \frac{\partial \mathcal{L}\left(\mathbf{y}^{(n)}, \hat{\mathbf{y}}^{(n)}\right)}{\partial \mathbf{b}^{(l)}}\right) \end{aligned}$$
 
 ### 3.1.4 反向传播算法
 
-## 3. 卷积神经网络结构和模型
-## 3. 卷积神经网络的求解
-## 3. 卷积神经网络的改进
+在上一节中，我们说明了使用梯度下降算法来更新参数。但是如果根据链式法则逐一计算的话，不仅工作量大而且易出错，十分低效，在此我们通常使用反向传播算法来高效的计算梯度以更新参数。
+
+现以第$l$层的参数权重$W^{l}$与阈值$b^{l}$为例，因3.1.3小节中的$\frac{\partial \mathcal{L}(\mathbf{y}, \hat{\mathbf{y}})}{\partial W(l)}$涉及向量矩阵微分，故我们先行对其偏导进行计算，根据链式法则有：
+
+$$\begin{aligned} \frac{\partial \mathcal{L}(\mathbf{y}, \hat{\mathbf{y}})}{\partial w_{i j}^{(l)}} &=\frac{\partial \mathbf{z}^{(l)}}{\partial w_{i j}^{(l)}} \frac{\partial \mathcal{L}(\mathbf{y}, \hat{\mathbf{y}})}{\partial \mathbf{z}^{(l)}} \\ \frac{\partial \mathcal{L}(\mathbf{y}, \hat{\mathbf{y}})}{\partial \mathbf{b}^{(l)}} &=\frac{\partial \mathbf{z}^{(l)}}{\partial \mathbf{b}^{(l)}} \frac{\partial \mathcal{L}(\mathbf{y}, \hat{\mathbf{y}})}{\partial \mathbf{z}^{(l)}} \end{aligned}$$
+
+上市中的第二项为误差项，根据书籍[9]中的推导，偏导数$\frac{\partial \mathbf{z}^{(l)}}{\partial w_{i j}^{(l)}}$、$\frac{\partial \mathbf{z}^{(l)}}{\partial \mathbf{b}^{(l)}}$、$\frac{\partial \mathcal{L}(\mathbf{y}, \hat{\mathbf{y}})}{\partial \mathbf{z}^{(l)}}$结果如下所示：
+
+$$\frac{\partial \mathbf{z}^{(l)}}{\partial w_{i j}^{(l)}}=\left[0, \cdots, a_{j}^{(l-1)}, \cdots, 0\right] \in \mathbb{R}^{m^{(l)}}$$
+
+$$
+\frac{\partial \mathbf{z}^{(l)}}{\partial \mathbf{b}^{(l)}}=\mathbf{I}_{m}(l) \in \mathbb{R}^{m^{(l)} \times n^{(l)}}
+$$
+
+$$\delta^{(l)}=f_{l}^{\prime}\left(\mathbf{z}^{(l)}\right) \odot\left(\left(W^{(l+1)}\right)^{\mathrm{T}} \delta^{(l+1)}\right)$$
+
+误差项$\delta^{(l)}$反映了最终损失对于第$l$层神经元的敏感程度，亦间接反映了不同层神经元的贡献程度。由上述三式可以看出，我们可以从第$l+1$层的误差项得出第$l$层的误差项，即反向传播原理。
+
+在计算出了上述三个偏导数之后，我们可以将第$l$层的参数值表达如下：
+
+$$\frac{\partial \mathcal{L}(\mathbf{y}, \hat{\mathbf{y}})}{\partial W^{(l)}}=\delta^{(l)}\left(\mathbf{a}^{(l-1)}\right)^{\mathrm{T}}$$
+
+$$\frac{\partial \mathcal{L}(\mathbf{y}, \hat{\mathbf{y}})}{\partial \mathbf{b}^{(l)}}=\delta^{(l)}$$
+
+至此，我们可以将看基于误差反向传播算法的前馈网络的训练过程总结如下：
+
+1，前馈计算每一层的的输入$z_{i}$与输出$a_{i}$;
+2，反向传播每一层的误差项$\delta_{i}$;
+3，利用误差项计算每个神经层的偏导数更新参数;
+
+
+## 3.2 卷积神经网络结构和模型
+
+### 3.2.1 卷积神经网络的改进之处
+
+在全连接前馈网络中，假设第$l$层有$n^{(l)}$个神经元，第$l-1$层有$n^{(l-1)}$个神经元，则权重矩阵有$n^{(l)}\times n^{(l-1)}$个参数。在$n$特别大的时候，网络训练起来会十分麻烦，效率非常低下。
+
+我们为解决这一问题，使用卷积来替代全连接，假设第$l$层的输入为$z^{l}$为第$l-1$层的输出$a^{l-1}$与滤波器$W^{l}$的卷积，则有：
+
+$$\mathbf{z}^{(l)}=\mathbf{w}^{(l)} \otimes \mathbf{a}^{(l-1)}+b^{(l)}$$
+
+其中$\otimes$代表卷积运算，$W^{l}$为可学习的权重，$b^{l}$为可学习的偏置。根据卷积的数学性质，卷积层有两个十分重要的性质：
+
+1)**局部连接**
+
+模仿人类的视觉系统，在卷积神经网络中，卷积层中第$l$层的每一个神经元只与第$l-1$层的部分神经元相连接，连接数值取决于卷积核的大小，若将其设为$m$，则连接数可以表示为$n^{l}\times m$
+
+![](http://ww1.sinaimg.cn/large/006kDro9ly1g31bikadpvj30ia06bdgq.jpg)
+2)**权重共享**
+
+卷积神经网络中作为参数的卷积核$W^{l}$对于第$l$层的所有神经元均相同，如图中所示，相同颜色的线的权重一致。
+### 3.2.2 卷积网络中各个层的概念与原理 
+
+在卷积神经网络中，通常含有三种类型的隐藏层，分别为卷积层、池化层以及全连接层。下面对这三种类型的隐藏层逐一介绍：
+
+(1)卷积层
+
+卷积层的作用为提取一个局域区域的特征，在第一层神经网络中提取一些边缘、线条，在更多层的卷积层中可以提取更加高级的特征。其中一个重要的概念为feature map：feature map为在一幅图像或者其他的feature map经过卷积提取的特征。
+
+由于图像为二维结构，所以我们构建三层的神经层予以表示，其中大小可以表示为高度$M$宽度$N$深度$D$，即为$D$个$M\times N$大小的feature map。
+
+在输入层中，若图像为彩色图像，以RGB颜色空间表示，则有一个特征映射，深度$D=3$。
+
+我们可以将卷积神经网络卷积层作用用一般性的结论予以表示，根据文献[9]所示，假设输入feature map sets为$X$，输出feature map sets为$Y$，卷积核为$W$，卷积层净输入为$Z$，输出为$Y$，则有：
+
+$$Z^{p}=\mathbf{W}^{p} \otimes \mathbf{X}+b^{p}=\sum_{d=1}^{D} W^{p, d} \otimes X^{d}+b^{p}\\
+Y^{p}=f\left(Z^{p}\right)
+$$
+
+其中$\mathbf{X} \in \mathbb{R}^{M \times N \times D}$，且其中每个slice矩阵$X^{d} \in \mathbb{R}^{M \times N}$为一输入feature map，$1 \leq d \leq D$；$\mathbf{Y} \in \mathbb{R}^{M^{\prime} \times N^{\prime} \times P}$，且其中每个slice矩阵$Y\in\mathbb{R}^{M^{\prime} \times N^{\prime}}$为一输出feature map，$1 \leq p \leq P$，$\mathbf{W} \in \mathbb{R}^{m \times n \times D \times P}$。卷积层从输入feature map $X$到输出feature map $Y$的计算过程图示如下：
+
+![](http://ww1.sinaimg.cn/large/006kDro9ly1g34p2ft68cj30m60cb3z9.jpg)
+
+(2)池化层
+
+池化层又称汇聚层、子采样层，其作用为降低特征维度，减少参数数量，避免过拟合。
+
+与卷积层类似，我们给出池化层的一般性结论，假设池化层的输入featurem map为$\mathbf{X} \in \mathbb{R}^{M \times N \times D}$，将$x \in X^d$划分为多个区域$R_{m, n}^{d}$，$1 \leq m \leq M^{\prime}$，$1 \leq n \leq N^{\prime}$
+
+(3)全连接层
+
+
+## 3.3 卷积神经网络的参数学习
+
+## 3.4  卷积神经网络在处理图片时的优越性 
+在处理图片这种信息的时候，传统的全连接网络会存在两个问题：
+
+1)参数过多:如果图像大小为$100\times100\times3$，即长度宽度为100，3个颜色通道(RGB)。则在第一个隐藏层即有30000个互相独立的连接，且每个连接都有自己的参数。这样致使网络训练量过大，也非常容易过拟合；
+
+2)局部不变形特征:自然界中物体常常具有局部不变性，在旋转、平移、尺度变换中不损失语义信息，但是全连接网络常常提取不到这些性质。
 
 # 第四章 卷积神经网络对人脸的性别识别
 
-## 4.1 人脸检测相关技术即仿真
+## 4.1 人脸检测相关技术及仿真
 ## 4.1 用于性别识别的卷积神经网络结构设计
 ## 4.2 卷积神经网络建模过程
 ## 4.3 结果仿真和分析
