--- a/My work/paper/论文主题.md
+++ b/My work/paper/论文主题.md
@@ -403,7 +403,21 @@ $$
 
 池化层又称汇聚层、子采样层，其作用为降低特征维度，减少参数数量，避免过拟合。
 
-与卷积层类似，我们给出池化层的一般性结论，假设池化层的输入featurem map为$\mathbf{X} \in \mathbb{R}^{M \times N \times D}$，将$x \in X^d$划分为多个区域$R_{m, n}^{d}$，$1 \leq m \leq M^{\prime}$，$1 \leq n \leq N^{\prime}$
+与卷积层类似，我们给出池化层的一般性结论，假设池化层的输入featurem map为$\mathbf{X} \in \mathbb{R}^{M \times N \times D}$，将$x \in X^d$划分为多个区域$R_{m, n}^{d}$，$1 \leq m \leq M^{\prime}$，$1 \leq n \leq N^{\prime}$。我们在池化层中常用的汇聚函数有三种：
+
+1.Maximum Pooling，即取一个区域内所有神经元的最大值。
+
+$$Y_{m, n}^{d}=\max _{i \in R_{m, n}^{d}} x_{i}$$
+
+2.Mean Pooling，即取一个区域内神经元的平均值。
+
+$$Y_{m, n}^{d}=\frac{1}{\left|R_{m, n}^{d}\right|} \sum_{i \in R_{m, n}^{d}} x_{i}$$
+
+3.L2 Pooling，即取一个区域内神经元的平方和的平方根。
+
+我们以Maximun Pooling的图示[11]如下：
+
+![](https://mlnotebook.github.io/img/CNN/poolfig.gif)
 
 (3)全连接层
 
@@ -438,3 +452,4 @@ $$
 [8]:基于人脸图像的性别识别与年龄估计研究
 [9]:神经网络与机器学习
 [10]:https://www.tiobe.com/tiobe-index/
+[11]:Machine Learning Notebook:A resource for machine learning with Python
