--- a/My work/paper/论文主题.md
+++ b/My work/paper/论文主题.md
@@ -332,7 +332,7 @@ $$\begin{aligned} W^{(l)} & \leftarrow W^{(l)}-\alpha \frac{\partial \mathcal{R}
 
 $$\begin{aligned} \frac{\partial \mathcal{L}(\mathbf{y}, \hat{\mathbf{y}})}{\partial w_{i j}^{(l)}} &=\frac{\partial \mathbf{z}^{(l)}}{\partial w_{i j}^{(l)}} \frac{\partial \mathcal{L}(\mathbf{y}, \hat{\mathbf{y}})}{\partial \mathbf{z}^{(l)}} \\ \frac{\partial \mathcal{L}(\mathbf{y}, \hat{\mathbf{y}})}{\partial \mathbf{b}^{(l)}} &=\frac{\partial \mathbf{z}^{(l)}}{\partial \mathbf{b}^{(l)}} \frac{\partial \mathcal{L}(\mathbf{y}, \hat{\mathbf{y}})}{\partial \mathbf{z}^{(l)}} \end{aligned}$$
 
-上市中的第二项为误差项，根据书籍[9]中的推导，偏导数$\frac{\partial \mathbf{z}^{(l)}}{\partial w_{i j}^{(l)}}$、$\frac{\partial \mathbf{z}^{(l)}}{\partial \mathbf{b}^{(l)}}$、$\frac{\partial \mathcal{L}(\mathbf{y}, \hat{\mathbf{y}})}{\partial \mathbf{z}^{(l)}}$结果如下所示：
+上市中的第二项为误差项，根据书籍[9]中的推导，偏导数$\frac{\partial \mathbf{z}^{(l)}}{\partial w_{i j}^{(l)}}$、$\frac{\partial \mathbf{z}^{(l)}}{\partial \mathbf{b}^{(l)}}$以及误差项$\frac{\partial \mathcal{L}(\mathbf{y}, \hat{\mathbf{y}})}{\partial \mathbf{z}^{(l)}}$的结果如下所示：
 
 $$\frac{\partial \mathbf{z}^{(l)}}{\partial w_{i j}^{(l)}}=\left[0, \cdots, a_{j}^{(l-1)}, \cdots, 0\right] \in \mathbb{R}^{m^{(l)}}$$
 
@@ -379,7 +379,7 @@ $$\mathbf{z}^{(l)}=\mathbf{w}^{(l)} \otimes \mathbf{a}^{(l-1)}+b^{(l)}$$
 卷积神经网络中作为参数的卷积核$W^{l}$对于第$l$层的所有神经元均相同，如图中所示，相同颜色的线的权重一致。
 ### 3.2.2 卷积网络中各个层的概念与原理 
 
-在卷积神经网络中，通常含有三种类型的隐藏层，分别为卷积层、池化层以及全连接层。下面对这三种类型的隐藏层逐一介绍：
+在卷积神经网络中，通常含有三种类型的隐藏层，分别为卷积层、池化层以及全连接层。由于全连接网络与常见的前馈网络一致，故下面重点对这卷积层、池化层这两种类型的隐藏层进行介绍：
 
 (1)卷积层
 
@@ -415,21 +415,51 @@ $$Y_{m, n}^{d}=\frac{1}{\left|R_{m, n}^{d}\right|} \sum_{i \in R_{m, n}^{d}} x_{
 
 3.L2 Pooling，即取一个区域内神经元的平方和的平方根。
 
-我们以Maximun Pooling的图示[11]如下：
+$$Y_{m, n}^{d}=\sqrt{\sum_{i \in R_{m, n}^{d}} x_{i}^2}$$
+
+我们以Maximun Pooling的图示[11]如下，其余的汇聚函数的映射方式也是大致如此：
 
 ![](https://mlnotebook.github.io/img/CNN/poolfig.gif)
 
-(3)全连接层
-
-
 ## 3.3 卷积神经网络的参数学习
 
-## 3.4  卷积神经网络在处理图片时的优越性 
+与常见的前馈神经网络一致，卷积神经网络的训练过程也可以使用基于梯度下降的误差反向传播算法予以完成。
+
+如3.2小节所叙述，卷积神经网络一般含有卷积层、池化层、全连接层这三种类型的隐藏层，但是其卷积核、偏置两个重要参数只在卷积层中涉及，故我们只需要计算卷积层之中的梯度。
+
+假设第$l-1$层的输入Feature Map sets为$X\in \mathbb{R}^{M \times N \times D}$，第$l$层的Feature Map sets净输入为$\mathbf{Z}^{(l)} \in \mathbb{R}^{M^{\prime} \times N^{\prime} \times P}$。则第$l$层第$p$个Feature Map净输入为：
+
+$$Z^{(l, p)}=\sum_{d=1}^{D} W^{(l, p, d)} \otimes X^{(l-1, d)}+b^{(l, p)}$$
+
+其中损失函数关于第$l$层卷积核、偏置的偏导数如下：
+
+$$\begin{aligned} \frac{\partial \mathcal{L}(Y, \hat{Y})}{\partial W^{(l, p, d)}} &=\frac{\partial \mathcal{L}(Y, \hat{Y})}{\partial Z^{(l, p)}} \otimes X^{(l-1, d)} \\ &=\delta^{(l, p)} \otimes X^{(l-1, d)} \end{aligned}$$$$\frac{\partial \mathcal{L}(Y, \hat{Y})}{\partial b^{(l, p)}}=\sum_{i, j}\left[\delta^{(l, p)}\right]_{i, j}$$
+
+与其他前馈神经网络相同，卷积层每一层的卷积核、偏置均依赖于所在层的误差项。而第$l$层卷积层中第$d$个Feature Map的误差项的计算与传播更新方式如下所示：
+
+$$\begin{aligned} \delta^{(l, d)} & \triangleq \frac{\partial \mathcal{L}(Y, \hat{Y})}{\partial Z^{(l, d)}} \\ &=\frac{\partial X^{(l, d)}}{\partial Z^{(l, d)}} \cdot \frac{\partial \mathcal{L}(Y, \hat{Y})}{\partial X^{(l, d)}} \\ &=f_{l}^{\prime}\left(Z^{(l)}\right) \odot \sum_{p=1}^{P}\left(\operatorname{rot} 180\left(W^{(l+1, p, d)}\right) \tilde{\otimes} \frac{\partial \mathcal{L}(Y, \hat{Y})}{\partial Z^{(l+1, p)}}\right) \\ &=f_{l}^{\prime}\left(Z^{(l)}\right) \odot \sum_{p=1}^{P}\left(\operatorname{rot} 180\left(W^{(l+1, p, d)}\right) \tilde{\otimes} \delta^{(l+1, p)}\right) \end{aligned}$$
+
+## 3.4  卷积神经网络处理图片的优势
+
 在处理图片这种信息的时候，传统的全连接网络会存在两个问题：
 
 1)参数过多:如果图像大小为$100\times100\times3$，即长度宽度为100，3个颜色通道(RGB)。则在第一个隐藏层即有30000个互相独立的连接，且每个连接都有自己的参数。这样致使网络训练量过大，也非常容易过拟合；
 
 2)局部不变形特征:自然界中物体常常具有局部不变性，在旋转、平移、尺度变换中不损失语义信息，但是全连接网络常常提取不到这些性质。
+
+而卷积神经网络与传统的全连接神经网络对比，有以下诸多优势：
+
+(1)在神经网络中输入的图像是二维结构，而卷积神经网络中各层神经元也是二维平面，两者可以在拓扑结构上直接相连；
+
+(2)权值共享减少了诸多的训练参数，并且简化了网络的结构，极大程度上降低了运算的时间与空间复杂度；
+
+(3)卷积神经网络中卷积层与池化层两层结合进行特征提取的方式，对输入样本有较高的畸变容忍能力。
+
+## 总结
+
+本章主要讲解了卷积神经网络的原理，包括通用的前馈网络模型与卷积神经网络结构本身。
+
+第一节通过前馈网络中传播原理、通用近似定理、参数学习方式以及反向传播算法的介绍，将前馈型神经网络的数学模型用严格的数学模型进行了推导，给出了其通用的模型原理；第二节介绍了卷积神经网络相对于传统前馈神经网络的改进之处，并着重介绍了其隐藏层中的新概念；第三节结合卷积神经网络的特点与我们在前文谈论的基于梯度下降的反向传播算法，探讨了卷积神经网络的参数学习过程；第四节介绍了卷积神经网络在进行图片处理时候的独特优势，为第四章的性别识别模型打下理论基础。
 
 # 第四章 卷积神经网络对人脸的性别识别
 
@@ -451,5 +481,6 @@ $$Y_{m, n}^{d}=\frac{1}{\left|R_{m, n}^{d}\right|} \sum_{i \in R_{m, n}^{d}} x_{
 [7]:基于卷积神经网络的人脸性别识别研究
 [8]:基于人脸图像的性别识别与年龄估计研究
 [9]:神经网络与机器学习
-[10]:https://www.tiobe.com/tiobe-index/
+[10]:[TIOBE Index for May 2019](https://www.tiobe.com/tiobe-index/)
 [11]:Machine Learning Notebook:A resource for machine learning with Python
+[12]:[Mathematical physics applications in present-day image processing](https://mathoverflow.net/questions/268418/mathematical-physics-applications-in-present-day-image-processing)
