--- a/My work/paper/论文主题.md
+++ b/My work/paper/论文主题.md
@@ -463,10 +463,40 @@ $$\begin{aligned} \delta^{(l, d)} & \triangleq \frac{\partial \mathcal{L}(Y, \ha
 
 # 第四章 卷积神经网络对人脸的性别识别
 
+在使用卷积神经网络实现性别识别过程中，大致分为两大步骤，一为人脸检测，二为性别识别。故本章在第一节简要介绍人脸监测的相关技术与原理，并且给出仿真结果；在本章的二、三、四节进行具体的性别识别程序实现。
+
 ## 4.1 人脸检测相关技术及仿真
-## 4.1 用于性别识别的卷积神经网络结构设计
-## 4.2 卷积神经网络建模过程
-## 4.3 结果仿真和分析
+
+人脸检测技术是一种检测图片中是否含有(多个)人脸的算法，由于人脸在自然环境下存在着诸多的复杂情景，故采取一个具有鲁棒性的方法是十分必要的。人脸检测有基于先验知识、统计模型、人脸特征等多种方法，其中统计模型是现在的主流方向，本文采用基于统计模型的Adaboost方法来进行人脸检测。
+
+### 4.1.1 基于Haar特征的Adaboost人脸检测方法
+
+本方法来源于2001年Viola与Jones于文献[12]中提出的方法，整个人脸检测方法包括大致三个步骤，分别为Haar-like特征提取、基于Adaboost的分类器迭代训练。下面对其进行简单的介绍：
+
+(1)Haar-like特征极其计算
+
+Haar-ike定义为图像之中相邻像素和的差，在本文中可知它的特征值反映的是人脸图像的灰度变化情况，其特征大致一般分为四种类型：边缘特征、线性特征、对角线特征以及中心特征。[13]如下图所示：
+
+![](http://ww1.sinaimg.cn/large/006kDro9ly1g360xwyj2hj30pc06bdfr.jpg)
+
+在图像预处理形成灰度图像之后，我们可以将Haar-like特征值定义为图像之中一块区域内黑色像素之和与白色像素之和的差值，并且可以用积分图来提高其计算速度。
+
+假设$A(x,y)$为点$(x,y)$左上角所有像素之和
+
+$$\mathrm{t}(\mathrm{x}, \mathrm{y})=\mathrm{t}(\mathrm{x}, \mathrm{y}-1)+\mathrm{i}(\mathrm{x}, \mathrm{y})$$$$\mathrm{ii}(\mathrm{x}, \mathrm{y})=\mathrm{ii}(\mathrm{x}-1, \mathrm{y})+\mathrm{t}(\mathrm{x}, \mathrm{y})$$
+
+
+(2)Adaboost算法训练分类器
+
+
+### 4.1.2 基于opencv的人脸检测及其仿真结果
+
+![](http://ww1.sinaimg.cn/large/006kDro9ly1g35z0df9iej30m70b74ea.jpg)
+
+
+## 4.2 用于性别识别的卷积神经网络结构设计
+## 4.3 卷积神经网络训练过程
+## 4.4 结果仿真和分析
 
 # 第五章 总结与展望
 
@@ -484,3 +514,5 @@ $$\begin{aligned} \delta^{(l, d)} & \triangleq \frac{\partial \mathcal{L}(Y, \ha
 [10]:[TIOBE Index for May 2019](https://www.tiobe.com/tiobe-index/)
 [11]:Machine Learning Notebook:A resource for machine learning with Python
 [12]:[Mathematical physics applications in present-day image processing](https://mathoverflow.net/questions/268418/mathematical-physics-applications-in-present-day-image-processing)
+[13]:Rapid Object Detection using a Boosted Cascade of Simple Features.Viola&Jones
+[14]:基于人脸图像的性别识别研究
