--- a/My work/paper/论文主题.md
+++ b/My work/paper/论文主题.md
@@ -479,22 +479,126 @@ Haar-ike定义为图像之中相邻像素和的差，在本文中可知它的特
 
 ![](http://ww1.sinaimg.cn/large/006kDro9ly1g360xwyj2hj30pc06bdfr.jpg)
 
+在人脸之中，Haar特征可以用下图[15]清晰地体现出来：
+
+![](https://docs.opencv.org/master/visualisation_video.png)
+
 在图像预处理形成灰度图像之后，我们可以将Haar-like特征值定义为图像之中一块区域内黑色像素之和与白色像素之和的差值，并且可以用积分图来提高其计算速度。
 
-假设$A(x,y)$为点$(x,y)$左上角所有像素之和
+假设$A(x,y)$为点$(x,y)$左上角所有像素之和，$ii(x,y)$为$(x,y)$于积分图中的值，$i(x,y)$为于$(x,y)$这点的像素值，$t(x,y)$为点$(x,y)$纵坐标像素值之和。故我们有Haar积分图算法如下：
 
 $$\mathrm{t}(\mathrm{x}, \mathrm{y})=\mathrm{t}(\mathrm{x}, \mathrm{y}-1)+\mathrm{i}(\mathrm{x}, \mathrm{y})$$$$\mathrm{ii}(\mathrm{x}, \mathrm{y})=\mathrm{ii}(\mathrm{x}-1, \mathrm{y})+\mathrm{t}(\mathrm{x}, \mathrm{y})$$
 
 
 (2)Adaboost算法训练分类器
 
+Adaboost(Adaptive Boosting)即为自适应增强算法，其原理为迭代运算，由多个弱级联器组成强级联器进行检测。其理论基础为：若每一个弱级联器的分类水平都优于随机猜测的水平，将弱级联器的数量增加至无穷大，便可以得到误差率接近于零的强级联器。Adaboost算法伪代码如下所示：
+
+
+1.给定$\left(x_{1}, y_{1}\right), \ldots,\left(x_{m}, y_{m}\right)$，其中$x_{i} \in X, y_{i} \in Y=\{-1,+1\}$
+
+2.初始化权重$D_{1}(i)=1 / m$
+
+3.$for \ t=1, \ldots, T :$
+
+- 使用初始化权重$D$进行训练
+
+- 得到弱分类器$h : X \rightarrow\{-1,+1\}$及其错误率
+
+    其中$\epsilon=\operatorname{Pr}_{i \sim D_{t}}\left[h_{t}\left(x_{i}\right) \neq y_{i}\right]$
+
+- 计算$\alpha=\frac{1}{2} \ln \left(\frac{1-\epsilon}{\epsilon}\right)$
+
+- 更新权重$D_{t+1}(i)=\frac{D_{t}(i)}{Z_{t}} \times \left\{\begin{array}{ll}{e^{-\alpha_{i}}} & {\text { if } h_{t}\left(x_{i}\right)=y_{i}} \\ {e^{\alpha_{t}}} & {\text { if } h_{t}\left(x_{i}\right) \neq y_{i}}\end{array}\right.$
+
+4.输出强级联器:
+
+$$H(x)=\operatorname{sign}\left(\sum_{t=1}^{T} \alpha_{t} h_{t}(x)\right)$$
+
+Adaboost算法即为：将Haar特征向量输入强级联器中，结果为正，即为人脸。
 
 ### 4.1.2 基于opencv的人脸检测及其仿真结果
+
+opencv为一开源机器视觉库，包含着一系列的C函数与C++类，实现了一系列常用的机器视觉算法；并且提供了Matlab、Python、Ruby等其他编程语言的接口。优秀的算法实现与开源精神，使得opencv成为了在机器视觉中使用最为广泛应用之一。
+
+在此我们参考opencv中Adaboost算法源码，实现人脸检测。下以弱分类器源码[16]为例，进行解读：
+
+```c++
+typedef struct CvCARTClassifier
+{
+   CV_CLASSIFIER_FIELDS()
+    int  count;                     //弱分类器数量
+    int*compidx;                    //对应特征
+    CvTHaarFeature* feature;        //特征值
+    CvFastHaarFeature* fastfeature;
+    float*threshold;                //阈值
+    int*left;                       // 左子节点
+    int*right;                      // 右子节点
+    float*val;                      //输出
+}CvCARTClassifier;
+```
+此结构体定义的CvCARTClassifier即构造了一个二叉决策树，体现在机器学习中即为一个预测模型，指向目标对象的属性。
+
+利用opencv进行预测的人脸检测结果如下：
 
 ![](http://ww1.sinaimg.cn/large/006kDro9ly1g35z0df9iej30m70b74ea.jpg)
 
 
+我们可发现在这张著名的照片中，与会者29人有27人正确被检测出，正确率为$93\%$，达到了较高的水平。在本章的后续章节，将在本节讨论的基础上进行后续的展开工作。
+
 ## 4.2 用于性别识别的卷积神经网络结构设计
+
+对于论文的性别预测而言，为一个二分类问题。本文中采取Gil Levi、Tal Hassner于文献[3]中提出的网络结构，其仅含三个卷积层和两个具有较少神经元的全连接层。具体的结构如下所示：
+
+![](https://img-blog.csdn.net/20151020151912233?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQv/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center)
+
+这种具有较少结构的设计可以有效的避免过拟合现象，并且在训练速度较为快速。下面结合python示意代码具体说明模型各层参数与功能：
+
+(1)**卷积层1**(Convolutional Layer 1)
+
+```python
+conv1 = convolution2d(images, 96, [7,7], [4, 4],padding='VALID', biases_initializer=tf.constant_initializer(0.), scope='conv1')
+pool1 = max_pool2d(conv1, 3, 2, padding='VALID', scope='pool1')
+norm1 = tf.nn.local_response_normalization(pool1, 5, alpha=0.0001, beta=0.75, name='norm1')
+```
+
+(2)**卷积层2**(Convolutional Layer 2)
+
+```python
+conv2 = convolution2d(norm1, 256, [5, 5], [1, 1], padding='SAME', scope='conv2') 
+pool2 = max_pool2d(conv2, 3, 2, padding='VALID', scope='pool2')
+norm2 = tf.nn.local_response_normalization(pool2, 5, alpha=0.0001, beta=0.75, name='norm2')
+```
+(3)**卷积层3**(Convolutional Layer 3)
+
+```python
+
+conv3 = convolution2d(norm2, 384, [3, 3], [1, 1], biases_initializer=tf.constant_initializer(0.), padding='SAME', scope='conv3')
+pool3 = max_pool2d(conv3, 3, 2, padding='VALID', scope='pool3')
+flat = tf.reshape(pool3, [-1, 384*6*6], name='reshape')
+```
+
+(4)**全连接层1**(Full connected Layer 1)
+
+```python
+
+full1 = fully_connected(flat, 512, scope='full1')
+drop1 = tf.nn.dropout(full1, pkeep, name='drop1')
+```
+
+(5)**全连接层2**(Full connected Layer 2)
+
+```python
+
+full2 = fully_connected(drop1, 512, scope='full2')
+drop2 = tf.nn.dropout(full2, pkeep, name='drop2')
+```
+
+(6)**输出层**(Output)
+
+```python
+```
+
 ## 4.3 卷积神经网络训练过程
 ## 4.4 结果仿真和分析
 
@@ -516,3 +620,5 @@ $$\mathrm{t}(\mathrm{x}, \mathrm{y})=\mathrm{t}(\mathrm{x}, \mathrm{y}-1)+\mathr
 [12]:[Mathematical physics applications in present-day image processing](https://mathoverflow.net/questions/268418/mathematical-physics-applications-in-present-day-image-processing)
 [13]:Rapid Object Detection using a Boosted Cascade of Simple Features.Viola&Jones
 [14]:基于人脸图像的性别识别研究
+[15]:[Cascade Classifier Training](https://docs.opencv.org/master/dc/d88/tutorial_traincascade.html)
+[16]:[_cvhaartraining.h](https://github.com/npinto/opencv/blob/master/apps/haartraining/_cvhaartraining.h)
